force-app/main/default/objects/Project__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <type>TextArea</type>
</CustomField>