force-app/main/default/objects/Project__c/fields/Beneficiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Name__c</fullName>
    <label>Beneficiary Name</label>
    <type>TextArea</type>
</CustomField>