force-app/main/default/objects/Project__c/fields/Car_Parking_Charges__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Charges__c</fullName>
    <label>Car Parking Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>