force-app/main/default/objects/Project__c/fields/Check_Favoring_Name__c.field-meta.xml
<CustomField>
    <fullName>Check_Favoring_Name__c</fullName>
    <label>Cheque Favoring Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>