force-app/main/default/objects/Project__c/fields/Forfeit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forfeit_Amount__c</fullName>
    <label>Forfeit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>