force-app/main/default/objects/Project__c/fields/Generator_STP__c.field-meta.xml
<CustomField>
    <fullName>Generator_STP__c</fullName>
    <label>Generator/STP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>