force-app/main/default/objects/Project__c/fields/IFSC_code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_code__c</fullName>
    <label>IFSC code</label>
    <type>TextArea</type>
</CustomField>