force-app/main/default/objects/Project__c/fields/Project_Legal_URL__c.field-meta.xml
<CustomField>
    <fullName>Project_Legal_URL__c</fullName>
    <label>Project Legal URL</label>
    <type>Url</type>
</CustomField>