force-app/main/default/objects/Project__c/fields/Project_mortgager__c.field-meta.xml
<CustomField>
    <fullName>Project_mortgager__c</fullName>
    <label>Project mortgager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>