force-app/main/default/objects/Project__c/fields/Project_Plan_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Date__c</fullName>
    <label>Project Plan Date</label>
    <type>Date</type>
</CustomField>