force-app/main/default/objects/Project__c/fields/Project_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Unique_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Unique ID</label>
    <type>Text</type>
</CustomField>