force-app/main/default/objects/Project__c/fields/SLead__c.field-meta.xml
<CustomField>
    <fullName>SLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SLead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>