force-app/main/default/objects/Project__c/fields/STRR_No__c.field-meta.xml
<CustomField>
    <fullName>STRR_No__c</fullName>
    <label>STRR No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>