force-app/main/default/objects/Project__c/fields/Total_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Total_Sq_Ft__c</fullName>
    <formula>Total_Sqft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sq.Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>