force-app/main/default/objects/Project__c/fields/Total_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Total_Sqft__c</fullName>
    <label>Total Sqft</label>
    <summarizedField>Plot__c.Built_up_area__c</summarizedField>
    <summaryForeignKey>Plot__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>