force-app/main/default/objects/Project__c/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>NAME</columns>
    <columns>Available_Units__c</columns>
    <columns>Booked_Units__c</columns>
    <columns>Blocked_Units__c</columns>
    <columns>Total_Units__c</columns>
    <columns>Active__c</columns>
    <columns>Type_Of_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
</ListView>